--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,8 +15,11 @@
     "run_at": "document_end"
   }],
 
+  "icons": { "16": "icon16.png",
+             "48": "icon48.png",
+             "128": "icon128.png" },
+
   "browser_action": {
-    "default_icon": "icon.png",
     "default_title": "hide sidebar"
   },
   "permissions": [
